src/objects/Attribute_Set_Item__c.object
<CustomObject>
    <description>Definitions of attributes belonging to an attribute set.</description>
    <fields>
        <fullName>Attribute_Set__c</fullName>
        <label>Attribute Set</label>
        <referenceTo>Attribute_Set__c</referenceTo>
        <relationshipLabel>Attribute Set Items</relationshipLabel>
        <relationshipName>Attribute_Set_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attribute_Type__c</fullName>
        <label>Attribute Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Set__c</fullName>
        <description>Possible values that will populate a picklist</description>
        <inlineHelpText>Enter possible values each on a new line</inlineHelpText>
        <label>Value Set</label>
        <type>TextArea</type>
    </fields>
    <label>Attribute Set Item</label>
    <nameField>
        <label>Attribute Set Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Set Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>